# cutter

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.sh
cutter/: __init__.py  approver.py  captioner.py  cli.py  config.py  detector.py  downloader.py  pipeline.py  queue.py  reframer.py  slicer.py  state.py  whatsapp.py
cutter/poster/: __init__.py  base.py  instagram.py  tiktok.py  youtube.py
docs/: instagram_oauth.md  tiktok_oauth.md  whatsapp_setup.md
site/: index.html  privacy.html  terms.html
